<resources>
    <string name="app_name">ManagementWithSmartWearables</string>
    <!-- Strings related to login -->
    <string name="prompt_email">ID</string>
    <string name="prompt_password">PASS</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_title">스마트 웨어러블\n연동 작업관리</string>
    <string name="administrator">관리자</string>
    <string name="worker">작업자</string>
    <string name="approval_request">승인요청</string>
    <string name="work_list">작업리스트</string>
    <string name="work_status_list">작업현황 리스트</string>
    <string name="worker_detail_list">작업자별 상세 리스트</string>
    <string name="check_qr_information_button">정보확인</string>
    <string name="monitoring_button">안전모니터링</string>
    <string name="work_status_button">작업현황</string>
    <string name="status_approval_request">승인 요청 중</string>
    <string name="camera">실시간</string>
    <string name="approve">승인</string>
</resources>